Archive2/41/111031bca77474/output
main.cpp:12:5: error: static_assert failed ""
    static_assert( std::is_same<decltype(a), decltype(b)>{}, "");
    ^              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
